Fix scrollbar background in dark mode

--- a/Resources/ReleaseNotesColorStyle.css
+++ b/Resources/ReleaseNotesColorStyle.css
@@ -3,6 +3,7 @@
         color-scheme: dark;
         color: white;
         background: transparent;
+        color-scheme: dark;
     }
     :link {
         color: #419CFF;
